# cpp-std-fwd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: stdfwd.hh
tests/: all-inverse.cc  all.cc  filesystem.cc  hash.cc  less.cc  main.cc  tests.hh
